--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
     "sass": "^1.56.1"
   },
   "devDependencies": {
+    "@babel/core": "^7.23.3",
+    "@babel/preset-react": "^7.23.3",
     "@types/react": "^18.0.25",
     "@types/react-dom": "^18.0.9",
-    "@vitejs/plugin-react": "^2.2.0",
-    "vite": "^3.2.4"
+    "@vitejs/plugin-react": "^4.1.1",
+    "vite": "^4.5.0"
   }
 }
